--- a/icecreams.html
+++ b/icecreams.html
@@ -135,7 +135,7 @@
 
   <section class="menu-section">
     <div class="menu-item">
-      <img class="menu-img" src="Vanilla_Ice_Cream.jpg" alt="Vanilla Ice Cream" />
+      <img class="menu-img" src="Vanilla_Ice_Cream.jpg" alt="Classic Vanilla Ice Cream" />
       <div class="menu-desc">
         <h2>Classic Vanilla</h2>
         <p>
@@ -178,7 +178,7 @@
       <img
         class="menu-img"
         src="Chocolate_Ice_Cream.jpg"
-        alt="Vanilla Ice Cream"
+        alt="Chocolate Ice Cream"
       />
       <div class="menu-desc">
         <h2>Chocolate</h2>
@@ -200,7 +200,7 @@
       <img
         class="menu-img"
         src="Nutella_Ice_Cream.jpg"
-        alt="Vanilla Ice Cream"
+        alt="Nutella Ice Cream"
       />
       <div class="menu-desc">
         <h2>Nutella</h2>
@@ -223,7 +223,7 @@
       <img
         class="menu-img"
         src="Lemon_Ice_Cream.jpg"
-        alt="Vanilla Ice Cream"
+        alt="Lemon Ice Cream"
       />
       <div class="menu-desc">
         <h2>Lemon</h2>
