--- a/reservations.html
+++ b/reservations.html
@@ -2,50 +2,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reservations - Dolcidea</title>
   <!-- Google Fonts for a fancier font -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet" />
   <style>
     .navbar {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.85);
-      display: flex;
-      justify-content: center;
-      padding: 1rem 2rem;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-      z-index: 1000;
-    }
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.85);
+  display: flex;
+  justify-content: center;
+  padding: 1rem 2rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
 
-    .navbar ul {
-      display: flex;
-      list-style: none;
-      gap: 2rem;
-      padding: 0;
-      margin: 0;
-    }
+.navbar ul {
+  display: flex;
+  list-style: none;
+  gap: 2rem;
+  padding: 0;
+  margin: 0;
+}
 
-    .navbar ul li a {
-      text-decoration: none;
-      color: #f5f5f5;
-      font-weight: 600;
-      font-size: 1.1rem;
-      transition: color 0.3s ease;
-    }
+.navbar ul li a {
+  text-decoration: none;
+  color: #f5f5f5;
+  font-weight: 600;
+  font-size: 1.1rem;
+  transition: color 0.3s ease;
+}
 
-    .navbar ul li a:hover {
-      color: #d4af37;
-    }
+.navbar ul li a:hover {
+  color: #d4af37;
+}
 
-    body {
+body {
+  padding-top: 80px; /* To prevent navbar from overlapping content */
+  font-family: 'Quicksand', sans-serif;
+  background-color: #f5f5f5;
+  padding: 2rem;
+    }
+     body {
       padding-top: 80px; /* To prevent navbar from overlapping content */
       font-family: 'Quicksand', sans-serif;
       background-color: #f5f5f5;
       padding: 2rem;
-      margin: 0;
     }
 
     /* Centered h1 with golden outline */
@@ -71,24 +76,18 @@
       margin: auto;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
-
     label {
       display: block;
       margin-top: 1rem;
       font-weight: bold;
     }
-
     input, select, textarea {
       width: 100%;
       padding: 0.7rem;
       margin-top: 0.5rem;
       border: 1px solid #ccc;
       border-radius: 6px;
-      font-family: inherit;
-      font-size: 1rem;
-      box-sizing: border-box;
     }
-
     button {
       margin-top: 1.5rem;
       padding: 0.7rem 2rem;
@@ -98,43 +97,36 @@
       border-radius: 6px;
       font-weight: bold;
       cursor: pointer;
-      font-size: 1.1rem;
-      transition: background 0.3s ease;
     }
-
     button:hover {
       background: #b08a2e;
     }
   </style>
 </head>
 <body>
-  <nav class="navbar" role="navigation" aria-label="Primary navigation">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="cakes.html">Cakes</a></li>
-      <li><a href="icecreams.html">Ice Creams</a></li>
-      <li><a href="reservations.html" aria-current="page">Reservations</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="about.html">About Us</a></li>
-    </ul>
-  </nav>
-
+  <nav class="navbar">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="cakes.html">Cakes</a></li>
+    <li><a href="icecreams.html">Ice Creams</a></li>
+    <li><a href="reservations.html">Reservations</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="about.html">About Us</a></li>
+  </ul>
+</nav>
   <h1>Make a Reservation</h1>
-
-  <form novalidate>
+  <form>
     <label for="date">Select Date:</label>
-    <input type="date" id="date" name="date" required aria-required="true" />
+    <input type="date" id="date" name="date" required>
 
     <label for="method">Delivery or Pickup:</label>
-    <select id="method" name="method" required aria-required="true">
-      <option value="" disabled selected>Select an option</option>
+    <select id="method" name="method" required>
       <option value="delivery">Delivery</option>
       <option value="pickup">Pickup</option>
     </select>
 
     <label for="item">Select Item:</label>
-    <select id="item" name="item" required aria-required="true">
-      <option value="" disabled selected>Select an item</option>
+    <select id="item" name="item" required>
       <option value="ice500">Ice Cream Box 500g</option>
       <option value="ice1000">Ice Cream Box 1000g</option>
       <option value="ice2000">Ice Cream Box 2000g</option>
@@ -144,7 +136,7 @@
     </select>
 
     <label for="comments">Additional Comments:</label>
-    <textarea id="comments" name="comments" rows="4" placeholder="Any special requests?"></textarea>
+    <textarea id="comments" name="comments" rows="4"></textarea>
 
     <button type="submit">Submit</button>
   </form>
