--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,10 @@ body {
   </style>
 </head>
 <body>
+  <video autoplay muted loop id="bg-video">
+  <source src="gelateria.mp4" type="video/mp4">
+  Your browser does not support HTML5 video.
+</video>
   <nav class="navbar">
   <ul>
     <li><a href="index.html">Home</a></li>
