--- a/contact.html
+++ b/contact.html
@@ -39,12 +39,15 @@
 }
 
 body {
-  padding-top: 80px; /* To prevent navbar from overlapping content */
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* prevent scrolling */
 }
 
     body, html {
       margin: 0;
       height: 100%;
+      overflow:hidden;
       font-family: 'Quicksand', sans-serif;
     }
     .hero {
