--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <video class="video-background" autoplay muted loop playsinline>
-      <source src="icecream-showcase.mp4" type="video/mp4" />
+      <source src="main_page.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
     <div class="overlay"></div>
