--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
       overflow: hidden;
     }
     .video-background {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      z-index: -2;
-      max-width: 100%; /* responsive */
-      height: auto;    /* responsive */
-      display: block;
-    }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -2;
+  max-width: 100%; /* optional */
+  /* remove height: auto; */
+  display: block;
+}
     .overlay {
       position: fixed;
       top: 0;
