--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     html, body {
       height: 100%;
       font-family: 'Quicksand', sans-serif;
-      background-color: #f5f5f5;
+      background-color: transparent;  /* Changed from #f5f5f5 */
       color: #2f2f2f;
     }
 
@@ -63,17 +63,16 @@
       overflow: hidden;
     }
     .video-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  z-index: -2;
-  max-width: 100%; /* optional */
-  /* remove height: auto; */
-  display: block;
-}
+      position: absolute;   /* Changed from fixed */
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+      z-index: -1;          /* Changed from -2 */
+      max-width: 100%; /* optional */
+      display: block;
+    }
    
     .hero-title {
       font-family: 'Great Vibes', cursive;
