--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
     .hero-title {
       font-family: 'Great Vibes', cursive;
       font-size: 7rem;
-      color: #fff;
+      color: #d4af37;
       text-shadow:
         -1px -1px 0 #d4af37,
          1px -1px 0 #d4af37,
         -1px  1px 0 #d4af37,
-         1px  1px 0 #d4af37;
+         1px  1px 0 #fff;
       z-index: 1;
       user-select: none;
     }
