--- a/index.html
+++ b/index.html
@@ -79,10 +79,14 @@
       font-size: 7rem;
       color: #d4af37;
       text-shadow:
-        -1px -1px 0 #d4af37,
-         1px -1px 0 #d4af37,
-        -1px  1px 0 #d4af37,
+        -1px -1px 0 #fff,
+         1px -1px 0 #fff,
+        -1px  1px 0 #fff,
          1px  1px 0 #fff;
+        -2px -2px 0 #fff,
+         2px -2px 0 #fff,
+        -2px  2px 0 #fff,
+         2px  2px 0 #fff;
       z-index: 1;
       user-select: none;
     }
