--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
       position: relative;
       overflow: hidden;
     }
+    .hero-subtitle {
+  font-size: 1.8rem;
+  color: #fff;
+  text-shadow: 0 0 5px #d4af37;
+  margin-top: 1rem;
+  z-index: 1;
+}
     .video-background {
       position: absolute;   /* Changed from fixed */
       top: 0;
@@ -190,6 +197,7 @@
       Your browser does not support the video tag.
     </video>
     <h1 class="hero-title">Dolcidea</h1>
+    <p class="hero-subtitle">Where desserts meet dreams</p>
   </section>
 
   <!-- Example menu section to show responsiveness -->
