--- a/index.html
+++ b/index.html
@@ -54,14 +54,16 @@
 
     /* Hero Section */
     .hero {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      position: relative;
-      overflow: hidden;
-    }
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  padding-top: 20vh; /* Pushes the text down from the top */
+}
     .hero-subtitle {
   font-size: 1.8rem;
   color: #fff;
