--- a/cakes.html
+++ b/cakes.html
@@ -57,7 +57,7 @@ body {
 
     body {
       font-family: 'Quicksand', sans-serif;
-      background-color: rgba(255, 255, 255, 0.3);
+      background-color: transparent;
       margin: 0;
       padding: 2rem;
     }
