--- a/cakes.html
+++ b/cakes.html
@@ -17,7 +17,7 @@
   min-height: 100%;
   z-index: -1;
   object-fit: cover;
-  opacity: 0.4; /* Adjust for desired visibility */
+  /*opacity: 0.4;*/ /* Adjust for desired visibility */
 }
     .navbar {
   position: fixed;
@@ -93,7 +93,7 @@ body {
     }
     .menu-item {
       display: flex;
-      /*background: white;*/
+      background: white;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       max-width: 800px;
       border-radius: 12px;
