--- a/icecreams.html
+++ b/icecreams.html
@@ -20,7 +20,7 @@
       min-height: 100%;
       z-index: -1;
       object-fit: cover;
-      opacity: 0.4; /* Adjust for desired visibility */
+      /*opacity: 0.4;*/ /* Adjust for desired visibility */
     }
 
     .navbar {
