--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@ body {
       z-index: -1;
     }
     .overlay {
-      background: rgba(0, 0, 0, 0.5);
+      /*background: rgba(0, 0, 0, 0.5);*/
       color: white;
       position: absolute;
       top: 0; left: 0;
