--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact - Dolcidea</title>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Quicksand:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     .navbar {
   position: fixed;
@@ -73,6 +74,27 @@ body {
       text-align: center;
       padding: 2rem;
     }
+    .overlay h1 {
+  font-size: 4rem;
+  font-family: 'Great Vibes', cursive;
+  color: #fff;
+  text-shadow:
+    -1px -1px 0 #d4af37,
+     1px -1px 0 #d4af37,
+    -1px  1px 0 #d4af37,
+     1px  1px 0 #d4af37;
+  margin-bottom: 1rem;
+}
+
+.overlay p {
+  font-size: 1.5rem;
+  color: #fff;
+  text-shadow:
+    -1px -1px 0 #d4af37,
+     1px -1px 0 #d4af37,
+    -1px  1px 0 #d4af37,
+     1px  1px 0 #d4af37;
+}
     h1, p {
       margin: 0.5rem 0;
     }
